--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
-    "start": "concurrently \"npm run server\" \"npm run client\""
+    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node backend/seeder",
+    "data:destroy": "node backend/seeder -d"
   },
   "repository": {
     "type": "git",
@@ -20,8 +22,11 @@
   },
   "homepage": "https://github.com/n3218/mern-shop#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.11.1"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
