--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "start": "node backend/server",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/n3218/mern-shop.git"
   },
-  "author": "",
+  "author": "N. Shport",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/n3218/mern-shop/issues"
   },
-  "homepage": "https://github.com/n3218/mern-shop#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
